[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = 'router_prometheus'
version = '0.5.2'
description = 'Get metrics from various consumer routers'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
	{name = 'Kateřina Medvědová', email = 'k8ie@firemail.cc'},
]
dependencies = [
    "PyYAML",
    "fabric",
    "prometheus_client"
]

[project.scripts]
router_prometheus = "router_prometheus.main:main"